Two Decoupled Connection/Liquibase per module between producer and consumer